--- a/setup.cfg
+++ b/setup.cfg
@@ -47,10 +47,12 @@ packages = find:
 
 [options.extras_require]
 doc =
+    doctest-ignore-unicode
     nbsphinx
     pydot >=1.2.3
     pydotplus
     recommonmark
+    setuptools
     sphinx >= 4.2.0
     sphinx-argparse
     sphinx-markdown-tables
