--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,13 +1,16 @@
 version: 2
 
+build:
+  os: ubuntu-22.04
+  tools:
+    python: "3.8"
+
 sphinx:
   configuration: docs/conf.py
 
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
       extra_requirements:
         - doc
-  system_packages: true
