Clean up testing framework and documentation (#889)

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -39,12 +39,12 @@ jobs:
       - checkout
       - restore_cache:
           key: ds001419-fmriprep-05
+      - run: *runinstall
       - run:
           name: Download ds001419-fmriprep test data
           command: |
             cd /src/xcp_d/.circleci
-            source get_data.sh
-            get_bids_data $PWD ds001419-fmriprep
+            python get_data.py $PWD/data ds001419-fmriprep
       - save_cache:
           key: ds001419-fmriprep-05
           paths:
@@ -56,12 +56,12 @@ jobs:
       - checkout
       - restore_cache:
           key: fmriprepwithoutfreesurfer-01
+      - run: *runinstall
       - run:
           name: Download fmriprepwithoutfreesurfer test data
           command: |
             cd /src/xcp_d/.circleci
-            source get_data.sh
-            get_bids_data $PWD sub01
+            python get_data.py $PWD/data sub01
       - save_cache:
           key: fmriprepwithoutfreesurfer-01
           paths:
@@ -73,12 +73,12 @@ jobs:
       - checkout
       - restore_cache:
           key: nibabies-01
+      - run: *runinstall
       - run:
           name: Download nibabies test data
           command: |
             cd /src/xcp_d/.circleci
-            source get_data.sh
-            get_bids_data $PWD nibabies
+            python get_data.py $PWD/data nibabies
       - save_cache:
           key: nibabies-01
           paths:
