--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
       - run: *runinstall
       - run:
           name: Download ds001419-fmriprep test data
@@ -46,7 +46,7 @@ jobs:
             cd /src/xcp_d/.circleci
             python get_data.py $PWD/data ds001419-fmriprep
       - save_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
           paths:
               - /src/xcp_d/.circleci/data/ds001419-fmriprep
 
@@ -55,15 +55,15 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: fmriprepwithoutfreesurfer-01
+          key: fmriprepwithoutfreesurfer-02
       - run: *runinstall
       - run:
           name: Download fmriprepwithoutfreesurfer test data
           command: |
             cd /src/xcp_d/.circleci
-            python get_data.py $PWD/data sub01
+            python get_data.py $PWD/data fmriprepwithoutfreesurfer
       - save_cache:
-          key: fmriprepwithoutfreesurfer-01
+          key: fmriprepwithoutfreesurfer-02
           paths:
               - /src/xcp_d/.circleci/data/fmriprepwithoutfreesurfer
 
@@ -72,7 +72,7 @@ jobs:
     steps:
       - checkout
       - restore_cache:
-          key: nibabies-01
+          key: nibabies-02
       - run: *runinstall
       - run:
           name: Download nibabies test data
@@ -80,9 +80,9 @@ jobs:
             cd /src/xcp_d/.circleci
             python get_data.py $PWD/data nibabies
       - save_cache:
-          key: nibabies-01
+          key: nibabies-02
           paths:
-              - /src/xcp_d/.circleci/data/nibabies_test_data
+              - /src/xcp_d/.circleci/data/nibabies
 
   nifti_without_freesurfer:
     <<: *dockersetup
@@ -97,7 +97,7 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: fmriprepwithoutfreesurfer-01
+          key: fmriprepwithoutfreesurfer-02
       - run: *runinstall
       - run:
           name: Run full xcp_d on nifti without freesurfer
@@ -128,7 +128,7 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
       - run: *runinstall
       - run:
           name: Run full xcp_d on nifti with freesurfer
@@ -159,7 +159,7 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: nibabies-01
+          key: nibabies-02
       - run: *runinstall
       - run:
           name: Run full xcp_d on nibabies
@@ -190,7 +190,7 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
       - run: *runinstall
       - run:
           name: Run full xcp_d on cifti with freesurfer
@@ -221,7 +221,7 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
       - run: *runinstall
       - run:
           name: Run full xcp_d on cifti with freesurfer
@@ -252,11 +252,11 @@ jobs:
               circleci step halt
             fi
       - restore_cache:
-          key: ds001419-fmriprep-05
+          key: ds001419-fmriprep-06
       - restore_cache:
-          key: fmriprepwithoutfreesurfer-01
+          key: fmriprepwithoutfreesurfer-02
       - restore_cache:
-          key: nibabies-01
+          key: nibabies-02
       - run: *runinstall
       - run:
           name: Run pytest on the tests directory
