--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@ xcp_d/tests/test_data
 xcp_d/tests/data/test_data
 .circleci/local_xcpd_path.txt
 
+# setuptools-scm
+xcp_d/_version.py
+
 # documentation
 docs/api/
 docs/generated/
