--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -316,7 +316,7 @@ jobs:
           no_output_timeout: 3h
           command: |
             # Get version, update files.
-            THISVERSION=$(python -c "from aslprep import __version__; print(__version__)")
+            THISVERSION=$(python3 -c "from xcp_d import __version__; print(__version__)")
             sed -i "s/title = {xcp_d}/title = {xcp_d ${CIRCLE_TAG:-$THISVERSION}}/" xcp_d/data/boilerplate.bib
             # Build docker image
             e=1 && for i in {1..5}; do
