--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -159,13 +159,13 @@ jobs:
           command: |
             pytest -rP -o log_cli=true -m "ds001419_nifti" --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
             mkdir /src/coverage
-            mv /src/xcp_d/.coverage /src/coverage/.coverage.pnc
+            mv /src/xcp_d/.coverage /src/coverage/.coverage.ds001419
             # remove nifti files before uploading artifacts
             find /src/xcp_d/.circleci/out/ -name "*.nii.gz" -type f -delete
       - persist_to_workspace:
           root: /src/coverage/
           paths:
-            - .coverage.test_ds001419_nifti
+            - .coverage.ds001419_nifti
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_ds001419_nifti/xcp_d/
 
